--- a/SRC/page_strat/cairos.html
+++ b/SRC/page_strat/cairos.html
@@ -55,95 +55,95 @@
     </div>
 
     <div class="nousflex">
-        <div class="cairos">
+        <div class="mainbox">
             <p>
 
                 <h3>
-                    <U>A quoi servent les monstres spéciaux (Angemon, Arcenmon et Devilmon) ?</U>
+                    <U>A) LES PRINCIPAUX DONJONS</U>
                 </h3>
                 </br>
-                Pour faire simple, ces trois monstres spéciaux ont des utilités différentes. Dans tous les cas, ils doivent être sacrifiés dans la Stèle d'amélioration :</br>
+                La plupart de ces donjons se caractérisent par leur nombre d'étages, soit 10 au total. Plus vous irez loin et plus la difficulté sera grande ainsi que les récompenses. De plus, la première fois que vous terminez un étage vous obtiendrez 5 cristaux.</br>
                 </br>
-
-                Angemon : ce sont des anges qui existent dans les 5 éléments et qui servent à améliorer vos monstres en leur donnant de l'expérience.</br>
-                Arcenmon : ces anges s'obtiennent directement au niveau max avec 2 étoiles. Il vous suffit de les faire évoluer avec des monstres de 2 étoiles pour obtenir des Arcenmon de 3 étoiles. Utilisez-les ensuite pour faire évoluer des monstres 3 étoiles en 4
-                étoiles.
+                I) Le donjon de la magie</br>
                 </br>
-                Devilmon : enfin, les Devilmon doivent être sacrifié pour augmenter les sorts des autres monstres.</br>
+                C'est surement le donjon que vous ferez le plus. Il est ouvert tout le temps et les essences de magie qui vous récupérerez seront la base de l'éveil de TOUS les monstres. Ce donjon se compose de trois salles : deux remplies de monstres puis la troisième
+                qui appartient au boss du donjon. En plus des essences de magie vous pourrez aussi récupérer d'autre essences élémentaires.</br>
                 </br>
-
-
+                </br>
+                II) Les donjons élémentaires</br>
+                </br>
+                C'est donjons sont au nombre de 5, un pour chaque élément (Lumière, Ténèbres, Feu, Eau et Vent). Vous y obtiendrez les essences élémentaires nécessaires à l'éveil de tel ou tel monstre. A l'instar du donjon de la magie ces donjons se composent également
+                de trois salle dont la dernière qui est également la salle du boss.
+                </br>
+                Ces donjons ne sont pas ouverts tous les jours mais suivent un cycle régulier :</br>
+                </br>
+                Lundi : donjon des ténèbres</br>
+                Mardi : donjon du feu</br>
+                Mercredi : donjon de l'eau</br>
+                Jeudi : donjon du vent</br>
+                Dimanche : donjon de la lumière</br>
+                </br>
+                Dans ces donjons vous provoquerez potentiellement l'ouverture de donjons secrets en guise de récompense, mais nous en parlerons dans la partie suivante.
+                </br>
+                </br>
+                III) Les donjons secrets</br>
+                </br>
+                Ces donjons sont particuliers, ils vous permettent de collecter des pièces d'un monstre afin de pouvoir l'invoquer. </br>
+                Ce même monstre est celui dont vous allez en affronter toute une armée si vous trouvez son donjon secret. L'élément du donjon secret dépend entièrement de l'élément du donjon dans lequel vous l'avez trouvé (pas de donjon secret dans le donjon de la magie
+                donc). </br>
+                Les donjons secrets n'ont qu'un seul étage et il ne vous rapporte pas de cristaux la première fois que vous le faites. L'étage en lui même se compose de 10 salles dont la dernière étant la salle du boss. Plus vous irez loin et plus de pièces vous pourrez
+                collecter (pour un maximum de 4 au dixième étage). </br>
+                Les monstres que vous trouverez en donjon secret sont des monstres nativement 2* ou 3, ni plus ni moins. Pour les monstres 2 vous aurez besoin de 20 pièces pour les invoquer tandis que vous en aurez besoin de 40 pour les monstres 3*. </br>
+                De plus lorsque vous trouvez un donjon vos amis peuvent le voir et jusqu'à 10 d'entre eux peuvent y entrer vous rapportant de fait une pièce du-dit monstre ! </br>
+                Enfin sachez que les donjons secret que vous trouverez ne seront ouvert en tout et pour tout qu'une heure seulement.
+                </br>
+                </br>
+                IV) Le castel du géant, la tanière du dragon et Necropolis</br>
+                </br>
+                Ces trois donjons sont ouvert tous les jours. L'élément principal de ces donjons change en fonction de l'étage que vous faites. </br>
+                Leur structure est légèrement différente des autres donjons principaux. Elle se compose de cinq salles avec un mini-boss dans la troisième salle et bien sûr le boss dans la cinquième et dernière salle. </br>
+                Ici vous ne trouverez pas d'essences mais des runes qui diffèrent selon le donjon. </br>
+                </br>
+                Voici une liste des runes que vous y trouverez :
+                </br>
+                </br>
+                <a><img src="../../image/géant.png"></a>
+                </br>
+                </br>
+                Et voici les éléments à partir de l'étage 5 :
+                </br>
+                </br>
+                <a><img src="../../image/géant2.png"></a>
 
                 <h3>
-                    <U>Comment obtenir des monstres 4 ou 5 étoiles natural ?</U>
+                    <U>B) LES DONJONS LIÉS AUX ÉVÈNEMENTS</U>
                 </h3>
                 </br>
-                Tout d'abord, définissions le terme "natural". Un monstre de x étoiles natural correspond à un monstre qui possède à la base x étoiles, sans être passé par l'évolution.</br>
-                Le moyen le plus simple pour en obtenir est d'utiliser des vélins mystiques. Mais cette méthode est très aléatoire, et vous risquez plus souvent de récupérer des monstres de 3 étoiles.</br>
-
-                Autre moyen, utilisez l'Hexagramme de fusion : il s'agit d'un bâtiment qui se débloque lorsque vous parvenez au niveau 17. Avec ce bâtiment, vous allez pouvoir suivre une "recette" en combinant 3 monstres de 4 étoiles natural et 1 monstre de 2 étoiles
-                natural pour obtenir de façon sûre un monstres de 4 étoiles natural. Pour obtenir un monstre de 5 étoiles natural, vous devez combiner 3 monstres 4 étoiles natural et 1 monstre 3 étoiles natural.</br>
+                I) Les donjons secrets</br>
                 </br>
-
-
-
-
-                <h3>
-                    <U>Combien faut-il d'xp pour monter un monstre au niveau max ?</U>
-                </h3>
+                Vous allez sûrement me dire : "Quoi ? Ecore eux ?". Mais sachez qu'environ une à deux fois par mois Com2us lance un évènement qui ouvre un donjon secret non pas pour une heure mais pour 72 heures ! Et en principe il s'agit toujours d'un monstre nativement
+                3* !</br>
                 </br>
-                Tout dépend du nombre d'étoiles de votre monstre :</br>
                 </br>
-
-                Pour un monstre 1 étoiles, vous devez accumuler 15120 points d'expérience.</br>
-
-                Pour un monstre 2 étoiles, vous devez accumuler 35822 points d'expérience.</br>
-
-                Pour un monstre 3 étoiles, vous devez accumuler 82182 points d'expérience.</br>
-
-                Pour un monstre 4 étoiles, vous devez accumuler 189750 points d'expérience.</br>
-
-                Pour un monstre 5 étoiles, vous devez accumuler 446647 points d'expérience.</br>
-
-                Pour un monstre 6 étoiles, vous devez accumuler 1005420 points d'expérience.</br>
+                II) Le hall des héros</br>
                 </br>
-
-                Aussi, les monstres que vous sacrifiez dans la Stèle d'amélioration apportent une quantité d'xp différente selon son nombre d'étoiles :</br>
-
-                Un monstre de 1 étoile donne 800 points d'expérience.</br>
-
-                Un monstre de 2 étoiles donne 1760 points d'expérience.</br>
+                Environ une fois par mois vous aurez accès au hall des héros pendant 72 heure. Celui-ci contiendra un monstre choisi à l'avance par Com2us dont vous pourrez obtenir des pièces afin de l'invoquer. Notez quand même quelques différences par rapport aux donjons
+                secret. La première et non des moindres est que le monstre est un natif 4* ! </br>
+                Ensuite il y a dix étages vous rapportant chacun 25 pièces. Chaque étage est bien évidement plus dur que le précédant et ils vous rapporteront également 5 cristaux la première fois que vous les réussissez. </br>
+                Enfin chaque étage se compose de 6 salles avec la 3ème contenant deux mini-boss qui sont des monstres différents de celui du hall des héros et la dernière qui contient le ou les boss du donjon !
                 </br>
-
-                Un Angemon au niveau 15 donne 19361 points d'expérience, mais un Angemon éveillé de niveau 15 en donne 29041 à un monstre du même élément !</br>
                 </br>
-
-
-
-
-                <h3>
-                    <U>Quelles sont les monstres qui peuvent évoluer jusqu'à 6 étoiles ?</U>
-                </h3>
+                III) Les donjons angemon, arcenmon et diablemon</br>
                 </br>
-                Tous les monstres peuvent être évolués jusqu'à 6 étoiles ! Cependant, selon les monstres, il est plus intéressant de faire évoluer un monstre de 3 étoiles natural jusqu'à 6 étoiles plutôt qu'un monstre 5 étoiles natural jusqu'à 6 étoiles.</br>
+                Ces donjons sont parfois ouvert pendant une heure à un moment précis de la journée lors d'un évènement, parfois ouvert toute une journée. Il vous rapportent 5 cristaux quand vous les réussissez mais vous ne pouvez les faire qu'une seule fois, sauf pour
+                les donjons angemon. Ils vous rapportent automatiquement le monstre du donjon (exemple: un donjon diablemon vous rapportera obligatoirement et automatiquement un diablemon).
                 </br>
-
-
-
-
-                <h3>
-                    <U>Est-ce que l'éveil d'un monstre bloque sa progression ?</U>
-                </h3>
                 </br>
-                Non, l'éveil d'un monstre ne bloque pas sa progression, bien au contraire ! Votre monstre éveillé va changer d'apparence, de nom et va grandement augmenter ses statistiques. Il sera ainsi bien plus puissant. A partir de cette état éveillé, vous pouvez
-                continuer à le faire évoluer en augmentant son nombre d'étoiles.</br>
-
+                IV) Ouverture de tous les donjons élémentaires</br>
+                </br>
+                Ce n'est pas vraiment un nouveau donjon mais il arrive que pendant une durée prédéterminée tous les donjons élémentaires s'ouvrent en même temps. En général cela arrive une fois par mois.
+                </br>
             </p>
-
-
-
-
-
         </div>
     </div>
 
@@ -169,44 +169,6 @@
         }
     </script>
 </body>
-
-<style>
-    .cairos {
-        background-color: rgb(43, 51, 78);
-        background-size: cover;
-        width: 75%;
-        height: 100%;
-        text-align: center;
-        margin: auto;
-        margin-top: 100px;
-        margin-bottom: 60px;
-        padding: 50px;
-        border-radius: 5%;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: larger;
-    }
-    
-    .nousflex {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-        height: 200%;
-    }
-</style>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
