--- a/SRC/page_strat/raid.html
+++ b/SRC/page_strat/raid.html
@@ -52,7 +52,58 @@
         <h2>Raid des Mondes</h2>
     </div>
 
+    <div class="nousflex">
+        <div class="mainbox">
+            <p>
+                <h3>
+                    <U>Qu'est ce que le Raid ?</U>
+                </h3>
+                </br>
+                Le raid est un contenu late game de Summoners War, qui vous offrira en guise de récompenses de quoi améliorer vos runes les plus précieuses.
+                </br>
+                </br>
+                Summoners War : la stratégie pour le Raid du Rift des mondes Dans Summoners War, le Raid est un contenu PVE à faire avec l'aide de deux autres joueurs. On vous conseillera donc de vous lancer dans le raid après le Géant B10 et le Dragon B10 car il vous
+                faudra de très bonnes stats de base en prérequis. Le raid vous permettra donc de meuler ou gemmer vos runes afin d'augmenter de façon considérable leurs propriétés.
+                </br>
+                </br>
+                <a><img src="../../image/Raid.jpg"></a>
+                <h3>
+                    <U>Comment réussir son Raid ?</U>
+                </h3>
+                </br>
+                Pour réussir un raid, il vous faudra vous concentrer sur des compétences ou leader skills afin de dominer le combat. Voici la composition de l'équipe-type ainsi que les rôles nécessaires au bon déroulement de l'affrontement :</br>
+                </br>
 
+                <ul>
+                    <li>Un anti-soin sur la compétence 1, avec Dias ou Colleen, par exemple</li>
+                    <li>Un monstre réduisant les dégâts reçus grâce à son passif tel que Dias ou Darion</li>
+                    <li>Deux supports soigneurs ou cleansers (qui supprime les débuffs)</li>
+                    <li>Un réducteur de vitesse tel que Hwa ou Xiao Lin</li>
+                    <li>Un ou deux gros DPS, qui frappent en fonction des debuffs, tels que l'Homunculus ou Xiao Lin</li>
+                    <li>Concernant les Compétences leaders; seules trois sont vraiment utilisées:</li>
+                    <li>Le lead défense comme celui fourni par Xiong Fei ou Bastet</li>
+                    <li>Le lead Taux critique comme celui de Hwa</li>
+                    <li>Le lead Résistance comme celui de Dias</li>
+                </ul>
+                </br>
+                En raid, il vous faudra aussi utiliser des formations particulières. Vous devrez mettre vos monstres supports en "front" (1ère ligne) et les DPS moins endurants en 2e ligne.
+                </br>
+
+                <h3>
+                    <U>Statistiques requises pour le 4e étage du Raid</U>
+                </h3>
+                <a><img src="../../image/raid1.png"> </a>
+
+                <h3>
+                    <U>Statistiques requises pour le 5e étage du Raid</U>
+                </h3>
+                <a><img src="../../image/raid2.png"> </a>
+
+            </p>
+
+
+        </div>
+    </div>
 
     <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='../../Nous.html'" /></footer>
 
@@ -74,5 +125,7 @@
         }
     </script>
 </body>
+
+
 
 </html>
