--- a/SRC/page_strat/toa.html
+++ b/SRC/page_strat/toa.html
@@ -55,7 +55,7 @@
 
 
     <div class="nousflex">
-        <div class="cairos">
+        <div class="mainbox">
             <p>
 
                 <h3>
@@ -146,31 +146,5 @@
     </script>
 </body>
 
-<style>
-    .cairos {
-        background-color: rgb(43, 51, 78);
-        background-size: cover;
-        width: 75%;
-        height: 100%;
-        text-align: center;
-        margin: auto;
-        margin-top: 100px;
-        margin-bottom: 60px;
-        padding: 50px;
-        border-radius: 5%;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: larger;
-    }
-    
-    .nousflex {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-        height: 200%;
-    }
-</style>
 
 </html>
