--- a/SRC/page_strat/evolution.html
+++ b/SRC/page_strat/evolution.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="nousflex">
-        <div class="cairos">
+        <div class="mainbox">
             <p>
 
                 <h3>
@@ -64,14 +64,21 @@
                 Pour faire simple, ces trois monstres spéciaux ont des utilités différentes. Dans tous les cas, ils doivent être sacrifiés dans la Stèle d'amélioration :</br>
                 </br>
 
-                Angemon : ce sont des anges qui existent dans les 5 éléments et qui servent à améliorer vos monstres en leur donnant de l'expérience.</br>
+                Angemon : ce sont des anges qui existent dans les 5 éléments et qui servent à améliorer vos monstres en leur donnant de l'expérience.
+                </br>
+                </br>
+                <a><img src="../../image/angemon.png"></a>
+                </br>
                 Arcenmon : ces anges s'obtiennent directement au niveau max avec 2 étoiles. Il vous suffit de les faire évoluer avec des monstres de 2 étoiles pour obtenir des Arcenmon de 3 étoiles. Utilisez-les ensuite pour faire évoluer des monstres 3 étoiles en 4
                 étoiles.
                 </br>
-                Devilmon : enfin, les Devilmon doivent être sacrifié pour augmenter les sorts des autres monstres.</br>
                 </br>
-
-
+                <a><img src="../../image/arcenmon.png"></a>
+                </br>
+                Devilmon : enfin, les Devilmon doivent être sacrifié pour augmenter les sorts des autres monstres.
+                </br>
+                </br>
+                <a><img src="../../image/diablemon.png"></a>
 
                 <h3>
                     <U>Comment obtenir des monstres 4 ou 5 étoiles natural ?</U>
@@ -167,51 +174,6 @@
         }
     </script>
 </body>
-
-
-
-
-
-<style>
-    .cairos {
-        background-color: rgb(43, 51, 78);
-        background-size: cover;
-        width: 75%;
-        height: 100%;
-        text-align: center;
-        margin: auto;
-        margin-top: 100px;
-        margin-bottom: 60px;
-        padding: 50px;
-        border-radius: 5%;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: larger;
-    }
-    
-    .nousflex {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-        height: 200%;
-    }
-</style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
