update mise en page

--- a/SRC/page_strat/runes.html
+++ b/SRC/page_strat/runes.html
@@ -69,13 +69,18 @@
                 </h3>
                 </br>
                 Lorsque vous obtenez une rune, la qualité indique le nombre de statistiques secondaires qu'elle possède. Cette qualité sera améliorée selon le niveau d'amélioration de la rune. Les qualités sont, de la moins bonne à la meilleure : Normal, Magique, Rare,
-                Héroïque et enfin Légendaire. Le nombre d'étoile d'une rune représente son rang, celui ci va de 1 à 6, 6 étant le plus haut rang. Plus le nombre d'étoile d'une rune est haut, meilleures seront ses statistiques. La statistique principale
-                est simplement la statistique primaire de la rune, c'est elle qui aura la plus grande valeur et donc influence, pour cette rune c'est une statistique PV+. Il est également possible qu'une rune possède une seconde statistique principale,
-                dans ce cas le nom de la rune changera pour refléter cette statistique. Ainsi cette rune gagne le préfixe Mortel grâce à sa seconde statistique principale en Taux de critique. Cette seconde statistique principale ne peut pas être améliorée
-                et ne peut pas être la même que la statistique principale ou les statistiques secondaires. Les statistiques secondaires sont des statistiques supplémentaires. Il est à noter qu'une rune ne peut pas avoir deux fois la même statistique,
-                peu importe qu'elle soit principale ou secondaire. Cette rune possède trois statistiques secondaires : PV%, Dgts critiq% et ATQ%. Enfin une rune possède un niveau d'amélioration allant de 0 à +15. Toutes les runes commencent à 0 et gagnent
-                en statistiques à chaque amélioration. Les détails concernant l'amélioration de runes seront traités plus loin dans ce guide. Il est important de noter que les bonus offerts par les runes ne s'appliquent qu'aux statistiques de base du
-                monstre, les bonus sont donc additifs et non multiplicatifs.</br>
+                Héroïque et enfin Légendaire.</br>
+                Le nombre d'étoile d'une rune représente son rang, celui ci va de 1 à 6, 6 étant le plus haut rang. Plus le nombre d'étoile d'une rune est haut, meilleures seront ses statistiques. La statistique principale est simplement la statistique primaire de la
+                rune, c'est elle qui aura la plus grande valeur et donc influence, pour cette rune c'est une statistique PV+. Il est également possible qu'une rune possède une seconde statistique principale, dans ce cas le nom de la rune changera pour
+                refléter cette statistique. Ainsi cette rune gagne le préfixe Mortel grâce à sa seconde statistique principale en Taux de critique.
+                </br>
+                </br>
+                Cette seconde statistique principale ne peut pas être améliorée et ne peut pas être la même que la statistique principale ou les statistiques secondaires. Les statistiques secondaires sont des statistiques supplémentaires. Il est à noter qu'une rune ne
+                peut pas avoir deux fois la même statistique, peu importe qu'elle soit principale ou secondaire. Cette rune possède trois statistiques secondaires : PV%, Dgts critiq% et ATQ%.
+                </br>
+                </br>
+                Enfin une rune possède un niveau d'amélioration allant de 0 à +15. Toutes les runes commencent à 0 et gagnent en statistiques à chaque amélioration. Les détails concernant l'amélioration de runes seront traités plus loin dans ce guide. Il est important
+                de noter que les bonus offerts par les runes ne s'appliquent qu'aux statistiques de base du monstre, les bonus sont donc additifs et non multiplicatifs.</br>
                 </br>
                 <h3>
                     <U>Graver une rune ?</U>
@@ -87,23 +92,67 @@
                 </h3>
                 </br>
                 Toutes les runes sont obtenues au niveau d'amélioration 0, et il est possible de les améliorer jusqu'au niveau +15. Chaque niveau d'amélioration va augmenter la statistique principale de la rune, et aux niveaux 3, 6, 9 et 12 une statistique secondaire
-                sera également améliorée. Le prix de l'amélioration varie selon le niveau d'amélioration actuel de la rune, et son nombre d'étoiles, tandis que les chances d'échec augmentent selon le niveau d'amélioration. C'est pour cela que monter une
-                rune à +15 peut être un vrai gouffre à mana. A noter également qu'il est impossible d'échouer une amélioration jusqu'au niveau +3.
+                sera également améliorée.
+                </br>
+                </br>
+                Le prix de l'amélioration varie selon le niveau d'amélioration actuel de la rune, et son nombre d'étoiles, tandis que les chances d'échec augmentent selon le niveau d'amélioration. C'est pour cela que monter une rune à +15 peut être un vrai gouffre à
+                mana. A noter également qu'il est impossible d'échouer une amélioration jusqu'au niveau +3.
                 <h3>
                     <U>Les sets de rune </U>
                 </h3>
                 </br>
                 Si on ne parle que maintenant des sets de rune, c'est pour une bonne raison : toutes les runes fonctionnent de la même manière, peu importe le set auquel appartient celle ci. Une rune d'un set pourra avoir les mêmes statistiques qu'une rune de n'importe
-                quel autre set. Le set n'est qu'un bonus actif lorsqu'un certain nombre de runes d'un même set sont équipées sur un monstre. Il existe des sets de 2 et 4 runes, il est donc possible d'avoir un set de 4 runes et un set de 2 runes, ou trois
-                sets de 2 runes. L'effet des sets se cumulent, donc trois sets Energies donneront au monstre PV +45%. Les runes d'un même set n'ont pas besoin d'être dans des emplacements se suivant, un set de 2 runes peut s'activer avec une rune dans
-                les emplacements 2 et 5 par exemple.</br>
+                quel autre set. Le set n'est qu'un bonus actif lorsqu'un certain nombre de runes d'un même set sont équipées sur un monstre.
+                </br>
+                </br>
+                Il existe des sets de 2 et 4 runes, il est donc possible d'avoir un set de 4 runes et un set de 2 runes, ou trois sets de 2 runes. L'effet des sets se cumulent, donc trois sets Energies donneront au monstre PV +45%. Les runes d'un même set n'ont pas besoin
+                d'être dans des emplacements se suivant, un set de 2 runes peut s'activer avec une rune dans les emplacements 2 et 5 par exemple.</br>
                 </br>
                 <a><img src="../../image/tableau_rune.png"> </a>
+                </br>
+                </br>
+                <h3>
+                    <U>Quelques précisions sur le fonctionnement de ces sets : </U>
+                </h3>
+                </br>
+                Les runes du set Violente donnent à un monstre 22% de chance de jouer à nouveau après son tour, et il est possible que l'effet s'applique plusieurs fois de suite. </br>
+                </br>
+                Si un monstre possède déjà un effet similaire aux runes Violente, tel que le passif de la Rashakasa Vent, le passif tente en premier d'avoir un second tour, et si cela ne fonctionne pas un second jet est lancé par le set. Ce n'est donc pas une addition.
+                </br>
+                </br>
+                L'immunité offerte par le set Volonté protège contre les effets néfastes et ne s'applique qu'au monstre possédant le set. L'effet de ces runes s'applique à chaque nouvelle vague (Donjons secrets exclus). </br>
+                </br>
+                Le set Volonté dure 3 tours si trois sets sont équipés. </br>
+                </br>
+                Le set Némésis augmente la jauge d'attaque du monstre de 4% chaque fois qu'il perds 7% de ses PV max. L'effet ne s'active pas s'il perds moins de 7% de ses PV. Si trois sets Némésis sont équipés, la jauge d'attaque augmente de 12% chaque fois qu'il perds
+                7% de ses PV max. </br>
+                </br>
+                L'effet des runes Protection s'applique à tous les monstres du groupe. Il est appliqué à chaque nouvelle vague (Donjons secrets exclus). Les runes Protection se cumulent entre elles, même entre monstres. Ainsi si tous les monstres (équipe de 4) sont équipés
+                de ces runes, chaque monstre reçoit un bouclier équivalent à 180% de ses PV max. </br>
+                </br>
+                Le bouclier des runes Protection peut se cumuler avec les boucliers crées par des monstres comme Acasis la Sylphid Vent, c'est un buff différent. Le set Vengeance permet au monstre de contre-attaquer avec l'attaque 1. Le tour du monstre n'est pas utilisé
+                lors d'une contre-attaque et on ne peut pas contre-attaquer suite à une contre-attaque. </br>
+                </br>
+                La compétence Annihiler de Raoq ou encore le set de rune Violent ne s'activent pas lors d'une contre-attaque du set Vengeance, mais l'effet du set Désespoir peut s'activer. </br>
+                </br>
+                Il est possible d'attaquer plusieurs fois lors d'une contre-attaque du set Vengeance avec les compétences le permettant, telles que l'attaque 1 de Raoq ou de Tyron le Sylph Eau. </br>
+                </br>
+                Le set Désespoir donne au monstre 25% de chance d'assommer l'adversaire avec ses attaques, même si celles ci ne possèdent pas de chance d'assommer. Si une attaque touche plusieurs monstres, chaque monstre aura une chance d'être assommé. Si une attaque
+                touche plusieurs fois, seule la première fois peut assommer. Enfin il faut que l'attaque inflige des dégâts pour pouvoir assommer, une attaque n'appliquant que des effets négatifs ne pourra pas déclencher l'effet du set. C'est un set apprécié
+                par les monstres ayant des attaques touchant tous les adversaires. </br>
+                </br>
+                L'effet des runes Vampire fonctionne avec n'importe quelle attaque, et non pas seulement sur les sorts drainant des HPs. </br>
+                </br>
+                L'effet des runes Vampire se cumulent avec les compétences drainant des PV comme l'attaque 1 des monstres Vampires. </br>
+                </br>
+                Les runes à utiliser sur un monstre sont souvent décrites dans un format particulier : sets de runes à utiliser, statistique de la rune en position 2 / statistique de la rune en position 4 / statistique de la rune en position 6. </br>
+                </br>
+                Par exemple pour Acasis la Sylphid Vent, il est conseillé de la runer Désespoir + Focus, VIT / PV% / Précision%. Cela signifie qu'il faut lui donner 4 runes du set Désespoir et 2 runes du set Focus, la statistique principale de la rune en position 2 doit
+                être VIT, celle de la rune en position 4 doit être PV%, et celle de la rune en position 6 doit être Précision%. </br>
+                </br>
+
+                <a><img class="runage" src="../../image/runage.png"> </a>
             </p>
-
-
-
-
 
         </div>
     </div>
