--- a/SRC/Eau.html
+++ b/SRC/Eau.html
@@ -48,80 +48,80 @@
         </nav>
     </div>
 
-    <div class="formation">
+    <div class="titrepartie">
         <h2>Monstres de type attaque</h2>
     </div>
     <hr>
 
-    <div id="ingenieur">
-        <div class="ingenieur1">
+    <div id="soustitre">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="TAOR" src="../image/Monstres/Eau/Taor_Icon.png" /> </a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="PSAMATHE" src="../image/Monstres/Eau/Psamathe_Icon.png" /></a>
+            <a><img class="icone" title="TAOR" src="../image/Monstres/Eau/Taor_Icon.png" /> </a>
 
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="ALICIA" src="../image/Monstres/Eau/Alicia_Icon.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="BETH" src="../image/Monstres/Eau/Beth_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="SIGMARUS" src="../image/Monstres/Eau/Sigmarus_Icon.png" /></a>
+            <a><img class="icone" title="PSAMATHE" src="../image/Monstres/Eau/Psamathe_Icon.png" /></a>
 
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="THEOMARS" src="../image/Monstres/Eau/Theomars_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="JULIE" src="../image/Monstres/Eau/Julie_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="LAPIS" src="../image/Monstres/Eau/Lapis_Icon.png" /></a>
-
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="XIAO LIN" src="../image/Monstres/Eau/Xiao_Lin_Icon.png" /></a>
+            <a><img class="icone" title="ALICIA" src="../image/Monstres/Eau/Alicia_Icon.png" /></a>
 
         </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="SABRINA" src="../image/Monstres/Eau/Sabrina.png" /></a>
+            <a><img class="icone" title="BETH" src="../image/Monstres/Eau/Beth_Icon.png" /></a>
+        </div>
+
+        <div class="soustitre1">
+
+            <a><img class="icone" title="SIGMARUS" src="../image/Monstres/Eau/Sigmarus_Icon.png" /></a>
+
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="THEOMARS" src="../image/Monstres/Eau/Theomars_Icon.png" /></a>
+
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="JULIE" src="../image/Monstres/Eau/Julie_Icon.png" /></a>
+        </div>
+
+        <div class="soustitre1">
+
+            <a><img class="icone" title="LAPIS" src="../image/Monstres/Eau/Lapis_Icon.png" /></a>
+
+
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="XIAO LIN" src="../image/Monstres/Eau/Xiao_Lin_Icon.png" /></a>
 
         </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="TALIA" src="../image/Monstres/Eau/Talia.png" /></a>
+            <a><img class="icone" title="SABRINA" src="../image/Monstres/Eau/Sabrina.png" /></a>
 
         </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="MINA" src="../image/Monstres/Eau/Mina_Icon.png" /></a>
+            <a><img class="icone" title="TALIA" src="../image/Monstres/Eau/Talia.png" /></a>
+
         </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="TARQ" src="../image/Monstres/Eau/Tarq_Icon.png" /></a>
+            <a><img class="icone" title="MINA" src="../image/Monstres/Eau/Mina_Icon.png" /></a>
+        </div>
+
+        <div class="soustitre1">
+
+            <a><img class="icone" title="TARQ" src="../image/Monstres/Eau/Tarq_Icon.png" /></a>
 
         </div>
 
@@ -129,41 +129,41 @@
     </div>
     </br>
 
-    <div class="formation">
+    <div class="titrepartie">
         <h2>Monstres de type Bruiser</h2>
     </div>
     <hr>
-    <div id="ingenieur">
-        <div class="ingenieur1">
+    <div id="soustitre">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="CHOW" src="../image/Monstres/Eau/Chow_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="CAMILLE" src="../image/Monstres/Eau/Camille_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="CHANDRA" src="../image/Monstres/Eau/Chandra_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="MO LONG" src="../image/Monstres/Eau/Mo_Long_Icon.png" /></a>
+            <a><img class="icone" title="CHOW" src="../image/Monstres/Eau/Chow_Icon.png" /></a>
 
         </div>
+        <div class="soustitre1">
 
+            <a><img class="icone" title="CAMILLE" src="../image/Monstres/Eau/Camille_Icon.png" /></a>
+        </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="SHI HOU" src="../image/Monstres/Eau/Shi_Hou_Icon.png" /></a>
+            <a><img class="icone" title="CHANDRA" src="../image/Monstres/Eau/Chandra_Icon.png" /></a>
+        </div>
+
+        <div class="soustitre1">
+
+            <a><img class="icone" title="MO LONG" src="../image/Monstres/Eau/Mo_Long_Icon.png" /></a>
 
         </div>
-        <div class="ingenieur1">
 
-            <a><img class="efrei" title="RIGEL" src="../image/Monstres/Eau/Rigel_Icon.png" /></a>
+
+        <div class="soustitre1">
+
+            <a><img class="icone" title="SHI HOU" src="../image/Monstres/Eau/Shi_Hou_Icon.png" /></a>
+
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="RIGEL" src="../image/Monstres/Eau/Rigel_Icon.png" /></a>
         </div>
 
 
@@ -173,59 +173,59 @@
 
     <br/>
 
-    <div class="formation">
+    <div class="titrepartie">
         <h2>Monstres de type support</h2>
     </div>
     <hr>
-    <div id="ingenieur">
-        <div class="ingenieur1">
+    <div id="soustitre">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="WOOSA" src="../image/Monstres/Eau/Woosa_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="ANAVEL" src="../image/Monstres/Eau/Anavel_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="ARIEL" src="../image/Monstres/Eau/Ariel_Icon.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="BASTET" src="../image/Monstres/Eau/Bastet_Icon.png" /></a>
+            <a><img class="icone" title="WOOSA" src="../image/Monstres/Eau/Woosa_Icon.png" /></a>
 
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="EMMA" src="../image/Monstres/Eau/Emma_Icon.png" /></a>
-
+            <a><img class="icone" title="ANAVEL" src="../image/Monstres/Eau/Anavel_Icon.png" /></a>
         </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="GALION" src="../image/Monstres/Eau/Galion_Icon.png" /></a>
+            <a><img class="icone" title="ARIEL" src="../image/Monstres/Eau/Ariel_Icon.png" /></a>
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="MEGAN" src="../image/Monstres/Eau/Megan_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="RINA" src="../image/Monstres/Eau/Rina_Icon.png" /></a>
+            <a><img class="icone" title="BASTET" src="../image/Monstres/Eau/Bastet_Icon.png" /></a>
 
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="KONAMIYA" src="../image/Monstres/Eau/Konamiya_Icon.png" /></a>
+            <a><img class="icone" title="EMMA" src="../image/Monstres/Eau/Emma_Icon.png" /></a>
 
         </div>
 
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="LULU" src="../image/Monstres/Eau/Lulu_Icon.png" /></a>
+            <a><img class="icone" title="GALION" src="../image/Monstres/Eau/Galion_Icon.png" /></a>
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="MEGAN" src="../image/Monstres/Eau/Megan_Icon.png" /></a>
+
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="RINA" src="../image/Monstres/Eau/Rina_Icon.png" /></a>
+
+        </div>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="KONAMIYA" src="../image/Monstres/Eau/Konamiya_Icon.png" /></a>
+
+        </div>
+
+        <div class="soustitre1">
+
+            <a><img class="icone" title="LULU" src="../image/Monstres/Eau/Lulu_Icon.png" /></a>
 
         </div>
 
@@ -237,36 +237,34 @@
     </div>
     <br/>
 
-    <div class="formation">
+    <div class="titrepartie">
         <h2>Monstres de type controle</h2>
     </div>
     <hr>
-    <div id="ingenieur">
-        <div class="ingenieur1">
+    <div id="soustitre">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="VERAD" src="../image/Monstres/Eau/Verad_Icon.png" /></a>
+            <a><img class="icone" title="VERAD" src="../image/Monstres/Eau/Verad_Icon.png" /></a>
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="POSEIDON" src="../image/Monstres/Eau/Poseidon_Icon.png" /></a>
+            <a><img class="icone" title="POSEIDON" src="../image/Monstres/Eau/Poseidon_Icon.png" /></a>
         </div>
-        <div class="ingenieur1">
+        <div class="soustitre1">
 
-            <a><img class="efrei" title="PRAHA" src="../image/Monstres/Eau/Praha_Icon.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" title="TYRON" src="../image/Monstres/Eau/Tyron_Icon.png" /></a>
+            <a><img class="icone" title="PRAHA" src="../image/Monstres/Eau/Praha_Icon.png" /></a>
 
         </div>
-        <div class="ingenieur1">
 
-            <a><img class="efrei" title="ORION" src="../image/Monstres/Eau/Orion_Icon.png" /></a>
+        <div class="soustitre1">
+
+            <a><img class="icone" title="TYRON" src="../image/Monstres/Eau/Tyron_Icon.png" /></a>
+
         </div>
+        <div class="soustitre1">
 
-
+            <a><img class="icone" title="ORION" src="../image/Monstres/Eau/Orion_Icon.png" /></a>
+        </div>
 
 
 
@@ -302,26 +300,6 @@
 
 </body>
 
-<style>
-    #ingenieur {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        margin-left: 2%;
-    }
-    
-    .ingenieur1 {
-        margin: 15px;
-        height: 100px;
-        text-align: center;
-    }
-    
-    .efrei {
-        height: 400px;
-        flex-basis: 450px;
-    }
-</style>
 
 </html>
 <br/>
